new config file

--- a/config
+++ b/config
@@ -1,24 +1,15 @@
-#### RANCHER PRIMER LABS ####
-Host jumphost
+## StudentXX ##
+Host rancherXX
  User rancher
- Port 10022
- IdentityFile ~/.ssh/rancher-primer-lab.pem
- HostName 127.0.0.1
+ HostName rancherXX.data-essential.eu
+ IdentityFile ~/.ssh/de-training.pem
+ UserKnownHostsFile=/dev/null
+ StrictHostKeyChecking=no
+ Port 22
 
-Host rha-1
+Host hostXX-*
  User rancher
- Port 11022
- IdentityFile ~/.ssh/rancher-primer-lab.pem
- HostName 127.0.0.1
-
-Host rha-2
- User rancher
- Port 12022
- IdentityFile ~/.ssh/rancher-primer-lab.pem
- HostName 127.0.0.1
-
-Host rha-3
- User rancher
- Port 13022
- IdentityFile ~/.ssh/rancher-primer-lab.pem
- HostName 127.0.0.1
+ IdentityFile ~/.ssh/studentXX.pem
+ UserKnownHostsFile=/dev/null
+ StrictHostKeyChecking=no
+ ProxyCommand ssh -i ~/.ssh/de-training.pem rancher@rancherXX.data-essential.eu nc %h %p
